--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </div>
                         <div class="text-wrapper">
                             <div class="logo-wrapper">
-                                <img src='images/logos/crondose.png' alt=''>
+                                <img src='images/logos/quip.png' alt=''>
                             </div>
                             <div class="subtitle">I built the Quip Ecommerce platform, named a Top 25 Invention by Time Magazine in 2016.</div>
                         </div>    
@@ -42,7 +42,7 @@
                             </div>
                             <div class="text-wrapper">
                                 <div class="logo-wrapper">
-                                    <img src='images/logos/dailysmarty.png' alt=''>
+                                    <img src='images/logos/devcamp.png' alt=''>
                                 </div>
                                 <div class="subtitle">Coding bootcamp and learning management system.</div>
                             </div>    
@@ -52,7 +52,7 @@
                             </div>
                             <div class="text-wrapper">
                                 <div class="logo-wrapper">
-                                    <img src='images/logos/dashtrack.png' alt=''>
+                                    <img src='images/logos/eventbrite.png' alt=''>
                                 </div>
                                 <div class="subtitle">Eventbrite is the leading event management platform on the web with millions of individuals utilizing their applications
                                         to find, register or, and management events in numerous industries.</div>
@@ -63,7 +63,7 @@
                             </div>
                             <div class="text-wrapper">
                                 <div class="logo-wrapper">
-                                    <img src='images/logos/devcamp.png' alt=''>
+                                    <img src='images/logos/shop-hacker.png' alt=''>
                                 </div>
                                 <div class="subtitle">Shop Hacker allows you to easily import digital products such as elearning courses, software, and games directly
                                         into your ecommerce store.</div>
@@ -74,7 +74,7 @@
                             </div>
                             <div class="text-wrapper">
                                 <div class="logo-wrapper">
-                                    <img src='images/logos/devtrunk.png' alt=''>
+                                    <img src='images/logos/edutechional.png' alt=''>
                                 </div>
                                 <div class="subtitle">Online tutorials and productivity tips.</div>
                             </div>    
