--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <div class="logo-wrapper">
                                 <img src='images/logos/quip.png' alt=''>
                             </div>
-                            <div class="subtitle">I built the Quip Ecommerce platform, named a Top 25 Invention by Time Magazine in 2016.</div>
+                            <div class="subtitle">Quip Ecommerce platform, named a Top 25 Invention by Time Magazine in 2016.</div>
                         </div>    
                     </div>
                     <div class="content-item-wrapper">
